Create data portal section

--- a/content/_config.yml
+++ b/content/_config.yml
@@ -8,7 +8,7 @@
 title                       : CELLxGENE Deep Dive Course  # The title of the book. Will be placed in the left navbar.
 author                      : CZI CELLxGENE team  # The author of the book
 copyright                   : "2023"  # Copyright year to be placed in the footer
-logo                        : Napari teacher.png  # A path to the book logo
+logo                        : cellxgeneLogoFull.webp #Napari teacher.png  # A path to the book logo
 
 # Force re-execution of notebooks on each build.
 # See https://jupyterbook.org/content/execute.html
